--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0183.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0183.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0183.png">
-      <!--<div class="ocr_carea" title="bbox 88 144 1852 744">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 715 154 1792 212">
         <span id="w_0" class="ocr_word" title="bbox 715 154 1037 200">
           <span class="alternatives">
@@ -34,230 +32,216 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 104 281 1792 351">
-        <span id="w_4" class="ocr_word" title="bbox 104 292 319 338" xml:lang="grc">
+        <span id="w_4" class="ocr_word" title="bbox 104 292 319 338" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λέλειπτο</ins>
           </span>
         </span>
-        <span id="w_5" class="ocr_word" title="bbox 372 305 458 337" xml:lang="grc">
+        <span id="w_5" class="ocr_word" title="bbox 372 305 458 337" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_6" class="ocr_word" title="bbox 507 281 848 350" xml:lang="grc">
+        <span id="w_6" class="ocr_word" title="bbox 507 281 848 350" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Παλαιολόγου</ins>
           </span>
         </span>
-        <span id="w_7" class="ocr_word" title="bbox 904 284 987 334" xml:lang="grc">
+        <span id="w_7" class="ocr_word" title="bbox 904 284 987 334" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διὰ</ins>
           </span>
         </span>
-        <span id="w_8" class="ocr_word" title="bbox 1042 304 1136 349" xml:lang="grc">
+        <span id="w_8" class="ocr_word" title="bbox 1042 304 1136 349" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_9" class="ocr_word" title="bbox 1185 281 1351 346" xml:lang="grc">
+        <span id="w_9" class="ocr_word" title="bbox 1185 281 1351 346" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὀξεῖαν</ins>
           </span>
         </span>
-        <span id="w_10" class="ocr_word" title="bbox 1409 286 1660 351" xml:lang="grc">
+        <span id="w_10" class="ocr_word" title="bbox 1409 286 1660 351" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">συμβολr̀ιν</ins>
-            <del title="nlp 0.90">συμβολαίων</del>
-            <del title="nlp 0.89">συμβολὴν</del>
-            <del title="nlp 0.88">συμβολήν</del>
+            <ins title="nlp 2.00">συμβολὴν</ins>
           </span>
         </span>
-        <span id="w_11" class="ocr_word" title="bbox 1707 304 1792 336" xml:lang="grc">
+        <span id="w_11" class="ocr_word" title="bbox 1707 304 1792 336" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 105 359 1792 430">
-        <span id="w_12" class="ocr_word" title="bbox 105 364 319 429" xml:lang="grc">
+        <span id="w_12" class="ocr_word" title="bbox 105 364 319 429" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πολέμου</ins>
           </span>
         </span>
-        <span id="w_13" class="ocr_word" title="bbox 355 384 422 429" xml:lang="grc">
+        <span id="w_13" class="ocr_word" title="bbox 355 384 422 429" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μὴ</ins>
           </span>
         </span>
-        <span id="w_14" class="ocr_word" title="bbox 461 361 771 427" xml:lang="grc">
+        <span id="w_14" class="ocr_word" title="bbox 461 361 771 427" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δυνηθέντος</ins>
           </span>
         </span>
-        <span id="w_15" class="ocr_word" title="bbox 820 362 1206 430" xml:lang="grc">
+        <span id="w_15" class="ocr_word" title="bbox 820 362 1206 430" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπαναστρέψαι.</ins>
           </span>
         </span>
-        <span id="w_16" class="ocr_word" title="bbox 1277 361 1361 412" xml:lang="grc">
+        <span id="w_16" class="ocr_word" title="bbox 1277 361 1361 412" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_17" class="ocr_word" title="bbox 1409 359 1476 422" xml:lang="grc">
+        <span id="w_17" class="ocr_word" title="bbox 1409 359 1476 422" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὡς</ins>
           </span>
         </span>
-        <span id="w_18" class="ocr_word" title="bbox 1526 381 1641 412" xml:lang="grc">
+        <span id="w_18" class="ocr_word" title="bbox 1526 381 1641 412" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐνὸν</ins>
           </span>
         </span>
-        <span id="w_19" class="ocr_word" title="bbox 1679 382 1792 424" xml:lang="grc">
+        <span id="w_19" class="ocr_word" title="bbox 1679 382 1792 424" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοὺς</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 105 439 1794 506">
-        <span id="w_20" class="ocr_word" title="bbox 105 440 215 493" xml:lang="grc">
+        <span id="w_20" class="ocr_word" title="bbox 105 440 215 493" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κατ’</ins>
           </span>
         </span>
-        <span id="w_21" class="ocr_word" title="bbox 265 461 423 505" xml:lang="grc">
+        <span id="w_21" class="ocr_word" title="bbox 265 461 423 505" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτὴν</ins>
           </span>
         </span>
-        <span id="w_22" class="ocr_word" title="bbox 471 440 776 505" xml:lang="grc">
+        <span id="w_22" class="ocr_word" title="bbox 471 440 776 505" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἠσφαλίσατο</ins>
           </span>
         </span>
-        <span id="w_23" class="ocr_word" title="bbox 821 459 905 489" xml:lang="grc">
+        <span id="w_23" class="ocr_word" title="bbox 821 459 905 489" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_24" class="ocr_word" title="bbox 953 459 1044 504" xml:lang="grc">
+        <span id="w_24" class="ocr_word" title="bbox 953 459 1044 504" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_25" class="ocr_word" title="bbox 1091 460 1178 505" xml:lang="grc">
+        <span id="w_25" class="ocr_word" title="bbox 1091 460 1178 505" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_26" class="ocr_word" title="bbox 1216 439 1526 505" xml:lang="grc">
+        <span id="w_26" class="ocr_word" title="bbox 1216 439 1526 505" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀκροπόλεως</ins>
           </span>
         </span>
-        <span id="w_27" class="ocr_word" title="bbox 1565 439 1794 506" xml:lang="grc">
+        <span id="w_27" class="ocr_word" title="bbox 1565 439 1794 506" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φρουρὰν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 106 514 1794 584">
-        <span id="w_28" class="ocr_word" title="bbox 106 540 206 580" xml:lang="grc">
+        <span id="w_28" class="ocr_word" title="bbox 106 540 206 580" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῖς</ins>
           </span>
         </span>
-        <span id="w_29" class="ocr_word" title="bbox 245 519 479 584" xml:lang="grc">
+        <span id="w_29" class="ocr_word" title="bbox 245 519 479 584" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐκκρίτοις</ins>
           </span>
         </span>
-        <span id="w_30" class="ocr_word" title="bbox 519 517 793 576" xml:lang="grc">
+        <span id="w_30" class="ocr_word" title="bbox 519 517 793 576" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">Βενετίκοις</ins>
-            <del title="nlp 0.90">τεθείκοις</del>
-            <del title="nlp 0.89">ἐνδίκοις</del>
-            <del title="nlp 0.88">ἐνηλίκοις</del>
+            <ins title="nlp 2.00">Βενετίκοις</ins>
           </span>
         </span>
-        <span id="w_31" class="ocr_word" title="bbox 833 535 935 566" xml:lang="grc">
+        <span id="w_31" class="ocr_word" title="bbox 833 535 935 566" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_32" class="ocr_word" title="bbox 973 523 1128 567" xml:lang="grc">
+        <span id="w_32" class="ocr_word" title="bbox 973 523 1128 567" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐκεῖσε</ins>
           </span>
         </span>
-        <span id="w_33" class="ocr_word" title="bbox 1166 515 1391 567" xml:lang="grc">
+        <span id="w_33" class="ocr_word" title="bbox 1166 515 1391 567" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀποίκων</ins>
           </span>
         </span>
-        <span id="w_34" class="ocr_word" title="bbox 1427 514 1663 582" xml:lang="grc">
+        <span id="w_34" class="ocr_word" title="bbox 1427 514 1663 582" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ἀνέθετο ,</ins>
-            <del title="nlp 0.90">ἀνέθετο,</del>
-            <del title="nlp 0.89">ἀνέθετό,</del>
-            <del title="nlp 0.88">ἀνέθεον,</del>
+            <ins title="nlp 2.00">ἀνέθετο,</ins>
           </span>
         </span>
-        <span id="w_35" class="ocr_word" title="bbox 1703 537 1794 583" xml:lang="grc">
+        <span id="w_35" class="ocr_word" title="bbox 1703 537 1794 583" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 107 592 1835 662">
-        <span id="w_36" class="ocr_word" title="bbox 107 598 160 646" xml:lang="grc">
+        <span id="w_36" class="ocr_word" title="bbox 107 598 160 646" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δέ</ins>
           </span>
         </span>
-        <span id="w_37" class="ocr_word" title="bbox 204 615 257 662" xml:lang="grc">
+        <span id="w_37" class="ocr_word" title="bbox 204 615 257 662" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γε</ins>
           </span>
         </span>
-        <span id="w_38" class="ocr_word" title="bbox 306 595 558 645" xml:lang="grc">
+        <span id="w_38" class="ocr_word" title="bbox 306 595 558 645" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπίλοιπον</ins>
           </span>
         </span>
-        <span id="w_39" class="ocr_word" title="bbox 612 603 778 644" xml:lang="grc">
+        <span id="w_39" class="ocr_word" title="bbox 612 603 778 644" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πᾶσαν</ins>
           </span>
         </span>
-        <span id="w_40" class="ocr_word" title="bbox 825 594 970 644" xml:lang="grc">
+        <span id="w_40" class="ocr_word" title="bbox 825 594 970 644" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πόλιν</ins>
           </span>
         </span>
-        <span id="w_41" class="ocr_word" title="bbox 1017 614 1081 644" xml:lang="grc">
+        <span id="w_41" class="ocr_word" title="bbox 1017 614 1081 644" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_42" class="ocr_word" title="bbox 1132 598 1181 657" xml:lang="grc">
+        <span id="w_42" class="ocr_word" title="bbox 1132 598 1181 657" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐξ</ins>
           </span>
         </span>
-        <span id="w_43" class="ocr_word" title="bbox 1223 592 1483 662" xml:lang="grc">
+        <span id="w_43" class="ocr_word" title="bbox 1223 592 1483 662" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">Ἀρβάνων</ins>
-            <del title="nlp 0.90">καρβάνων</del>
-            <del title="nlp 0.89">κριβάνων</del>
-            <del title="nlp 0.88">λιβάνων</del>
+            <ins title="nlp 2.00">Ἀρβάνων</ins>
           </span>
         </span>
-        <span id="w_44" class="ocr_word" title="bbox 1530 614 1793 662" xml:lang="grc">
+        <span id="w_44" class="ocr_word" title="bbox 1530 614 1793 662" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁρμωμένῳ</ins>
           </span>
@@ -269,41 +253,37 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 106 671 1661 743">
-        <span id="w_46" class="ocr_word" title="bbox 106 671 414 743" xml:lang="grc">
+        <span id="w_46" class="ocr_word" title="bbox 106 671 414 743" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">Κομισκόρτῃ</ins>
-            <del title="nlp 0.90">Κομήτῃ</del>
-            <del title="nlp 0.89">θεμισκόπον</del>
+            <ins title="nlp 2.00">Κομισκόρτῃ</ins>
           </span>
         </span>
-        <span id="w_47" class="ocr_word" title="bbox 452 693 509 723" xml:lang="grc">
+        <span id="w_47" class="ocr_word" title="bbox 452 693 509 723" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_48" class="ocr_word" title="bbox 548 673 841 725" xml:lang="grc">
+        <span id="w_48" class="ocr_word" title="bbox 548 673 841 725" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">συνοίσοντα</ins>
           </span>
         </span>
-        <span id="w_49" class="ocr_word" title="bbox 880 674 961 723" xml:lang="grc">
+        <span id="w_49" class="ocr_word" title="bbox 880 674 961 723" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διὰ</ins>
           </span>
         </span>
-        <span id="w_50" class="ocr_word" title="bbox 998 672 1297 740" xml:lang="grc">
+        <span id="w_50" class="ocr_word" title="bbox 998 672 1297 740" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γραμμάτων</ins>
           </span>
         </span>
-        <span id="w_51" class="ocr_word" title="bbox 1333 678 1661 739" xml:lang="grc">
+        <span id="w_51" class="ocr_word" title="bbox 1333 678 1661 739" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὑποθέμενος.</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
