--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0101.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0101.html
@@ -117,16 +117,11 @@
         </span>
         <span id="w_20" class="ocr_word" title="bbox 1651 393 1798 437" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μεμα-</ins>
+            <ins title="nlp 2.00">μεμαξήκοι,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 112 446 1797 517">
-        <span id="w_21" class="ocr_word" title="bbox 112 458 286 517" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θήκοι,</ins>
-          </span>
-        </span>
         <span id="w_22" class="ocr_word" title="bbox 326 450 381 500" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰ</ins>
@@ -312,7 +307,7 @@
         </span>
         <span id="w_58" class="ocr_word" title="bbox 1023 759 1281 824" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,εἴπατέ’’</ins>
+            <ins title="nlp 2.00">εἴπατέ’’</ins>
           </span>
         </span>
         <span id="w_59" class="ocr_word" title="bbox 1328 775 1454 826" lang="grc">
@@ -990,16 +985,11 @@
         </span>
         <span id="w_190" class="ocr_word" title="bbox 1604 1866 1805 1913" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παρα-</ins>
+            <ins title="nlp 2.00">„παραχωρήσατέ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 110 1924 1805 1992">
-        <span id="w_191" class="ocr_word" title="bbox 110 1924 358 1992" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χωρήσατέ</ins>
-          </span>
-        </span>
         <span id="w_192" class="ocr_word" title="bbox 394 1944 475 1989" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μοι</ins>
@@ -1037,16 +1027,11 @@
         </span>
         <span id="w_199" class="ocr_word" title="bbox 1651 1939 1805 1991" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προσ-</ins>
+            <ins title="nlp 2.00">προσκυνῆσαι.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 111 1999 1807 2069">
-        <span id="w_200" class="ocr_word" title="bbox 111 2010 340 2069" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κυνῆσαι.</ins>
-          </span>
-        </span>
         <span id="w_201" class="ocr_word" title="bbox 378 2002 563 2052" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἄτοπον</ins>
@@ -1131,16 +1116,11 @@
         </span>
         <span id="w_217" class="ocr_word" title="bbox 1687 2085 1805 2130" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θεο-</ins>
+            <ins title="nlp 2.00">θεομήτορι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 111 2156 1869 2224">
-        <span id="w_218" class="ocr_word" title="bbox 111 2176 284 2224" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μήτορι</ins>
-          </span>
-        </span>
         <span id="w_219" class="ocr_word" title="bbox 331 2158 614 2224" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">χρήσασθαι</ins>
@@ -1334,16 +1314,11 @@
         </span>
         <span id="w_256" class="ocr_word" title="bbox 1731 2410 1807 2442" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κε-</ins>
+            <ins title="nlp 2.00">κεκμηκυῖα,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 113 2465 1808 2536">
-        <span id="w_257" class="ocr_word" title="bbox 113 2474 350 2534" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κμηκυῖα,</ins>
-          </span>
-        </span>
         <span id="w_258" class="ocr_word" title="bbox 390 2471 575 2533" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μᾶλλον</ins>
