--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0030.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0030.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0030.png">
-      <!--<div class="ocr_carea" title="bbox 196 188 1920 924">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 215 201 409 246">
         <span id="w_0" class="ocr_word" title="bbox 215 201 409 246">
           <span class="alternatives">
@@ -19,379 +17,327 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 215 340 1901 403">
         <span id="w_1" class="ocr_word" title="bbox 215 341 408 403">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">οορίοδο</ins>
-            <del title="nlp 0.90">περίοδοι</del>
-            <del title="nlp 0.89">περίοδον</del>
-            <del title="nlp 0.88">περίοδος</del>
+            <ins title="nlp 2.00">copioso</ins>
           </span>
         </span>
         <span id="w_2" class="ocr_word" title="bbox 449 342 739 403">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">^Γαβοϋαϋδ</ins>
+            <ins title="nlp 2.00">graecitatis</ins>
           </span>
         </span>
         <span id="w_3" class="ocr_word" title="bbox 779 342 953 403">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ΐηάίοβ,</ins>
+            <ins title="nlp 2.00">indice,</ins>
           </span>
         </span>
         <span id="w_4" class="ocr_word" title="bbox 986 358 1082 403">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">(^ιιο</ins>
+            <ins title="nlp 2.00">quo</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 1117 342 1384 390">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">βάίϋοπθπι</ins>
+            <ins title="nlp 2.00">editionem</ins>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1423 340 1734 389">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">Βοηπθηδθΐη</ins>
-            <del title="nlp 0.90">Βοηθοίδη</del>
+            <ins title="nlp 2.00">Bonnensem</ins>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1773 342 1901 391">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">απχί.</ins>
+            <ins title="nlp 2.00">auxi.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 211 413 1900 477">
         <span id="w_8" class="ocr_word" title="bbox 211 415 500 475">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ρθ8ί;βήοη8</ins>
+            <ins title="nlp 2.00">posterioris</ins>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 534 418 700 463">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">&amp;πίβιη</ins>
-            <del title="nlp 0.90">θίβις</del>
-            <del title="nlp 0.89">στίβι</del>
-            <del title="nlp 0.88">ἐπίβα</del>
+            <ins title="nlp 2.00">autem</ins>
           </span>
         </span>
         <span id="w_10" class="ocr_word" title="bbox 726 416 965 463">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">8βΓΐηοηί8</ins>
+            <ins title="nlp 2.00">sermonis</ins>
           </span>
         </span>
         <span id="w_11" class="ocr_word" title="bbox 999 431 1054 463">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">3,0</ins>
+            <ins title="nlp 2.00">ac</ins>
           </span>
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1081 414 1451 463">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">οοηδπθίπάίηίδ</ins>
+            <ins title="nlp 2.00">consuetudinis</ins>
           </span>
         </span>
         <span id="w_13" class="ocr_word" title="bbox 1476 413 1528 460">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">ίη</ins>
+            <ins title="nlp 2.00">in</ins>
           </span>
         </span>
         <span id="w_14" class="ocr_word" title="bbox 1545 414 1720 462">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Αηηο,β</ins>
+            <ins title="nlp 2.00">Annae</ins>
           </span>
         </span>
         <span id="w_15" class="ocr_word" title="bbox 1753 431 1900 477">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ορβΓβ</ins>
-            <del title="nlp 0.90">φορβὰ</del>
-            <del title="nlp 0.89">φορβά</del>
-            <del title="nlp 0.88">φορβάν</del>
+            <ins title="nlp 2.00">opere</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 212 489 1899 550">
         <span id="w_16" class="ocr_word" title="bbox 212 491 411 550">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ρΐ’αβίβΓ</ins>
+            <ins title="nlp 2.00">praeter</ins>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 455 504 597 537">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">νοοβδ</ins>
-            <del title="nlp 0.90">νοοίη</del>
-            <del title="nlp 0.89">νοοῖ</del>
-            <del title="nlp 0.88">νοοῖο</del>
+            <ins title="nlp 2.00">voces</ins>
           </span>
         </span>
         <span id="w_18" class="ocr_word" title="bbox 639 492 688 537">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">θΐ</ins>
+            <ins title="nlp 2.00">et</ins>
           </span>
         </span>
         <span id="w_19" class="ocr_word" title="bbox 727 490 910 538">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ίΌηηαδ</ins>
+            <ins title="nlp 2.00">formas</ins>
           </span>
         </span>
         <span id="w_20" class="ocr_word" title="bbox 963 489 1176 536">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ηιαχίπιβ</ins>
+            <ins title="nlp 2.00">maxime</ins>
           </span>
         </span>
         <span id="w_21" class="ocr_word" title="bbox 1226 489 1486 537">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">νθΛοηιιη</ins>
+            <ins title="nlp 2.00">verborum</ins>
           </span>
         </span>
         <span id="w_22" class="ocr_word" title="bbox 1526 490 1764 549">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">(^ιιείδάίΐιη</ins>
+            <ins title="nlp 2.00">quasdam</ins>
           </span>
         </span>
         <span id="w_23" class="ocr_word" title="bbox 1810 505 1899 538">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ηθ8</ins>
-            <del title="nlp 0.90">γηθῶ</del>
-            <del title="nlp 0.89">δηθὰ</del>
-            <del title="nlp 0.88">δηθά</del>
+            <ins title="nlp 2.00">nos</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 213 562 1900 625">
         <span id="w_24" class="ocr_word" title="bbox 213 562 444 609">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">αάπιοηθΐ</ins>
-            <del title="nlp 0.90">σαράπιος</del>
-            <del title="nlp 0.89">ἀγάπιον</del>
-            <del title="nlp 0.88">Ἀγάπιον</del>
+            <ins title="nlp 2.00">admonet</ins>
           </span>
         </span>
         <span id="w_25" class="ocr_word" title="bbox 481 563 792 623">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ρβΓίπΛίΐίίο</ins>
+            <ins title="nlp 2.00">perturbatio</ins>
           </span>
         </span>
         <span id="w_26" class="ocr_word" title="bbox 831 563 1110 625">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">πιοάοηιιη,</ins>
+            <ins title="nlp 2.00">modorum,</ins>
           </span>
         </span>
         <span id="w_27" class="ocr_word" title="bbox 1151 578 1273 624">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">€[ΐΐ08</ins>
+            <ins title="nlp 2.00">quos</ins>
           </span>
         </span>
         <span id="w_28" class="ocr_word" title="bbox 1315 565 1372 609">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">πί}</ins>
-            <del title="nlp 0.90">πίε</del>
-            <del title="nlp 0.89">πίη</del>
-            <del title="nlp 0.88">πίω</del>
+            <ins title="nlp 2.00">ut</ins>
           </span>
         </span>
         <span id="w_29" class="ocr_word" title="bbox 1402 563 1535 609">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ΐ’βοίθ</ins>
+            <ins title="nlp 2.00">recte</ins>
           </span>
         </span>
         <span id="w_30" class="ocr_word" title="bbox 1575 566 1797 623">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ροηβΓβί,</ins>
-            <del title="nlp 0.90">προηβῶσί,</del>
-            <del title="nlp 0.89">προηβῶσι,</del>
+            <ins title="nlp 2.00">poneret,</ins>
           </span>
         </span>
         <span id="w_31" class="ocr_word" title="bbox 1838 579 1900 611">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ηβ</ins>
+            <ins title="nlp 2.00">ne</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 211 634 1899 699">
         <span id="w_32" class="ocr_word" title="bbox 211 636 385 682">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">Αηηαβ</ins>
-            <del title="nlp 0.90">ἄρηα</del>
-            <del title="nlp 0.89">ἄρηαι</del>
-            <del title="nlp 0.88">ἄρηαί</del>
+            <ins title="nlp 2.00">Annae</ins>
           </span>
         </span>
         <span id="w_33" class="ocr_word" title="bbox 412 636 609 697">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">(ΐπϊάβιη</ins>
+            <ins title="nlp 2.00">quidem</ins>
           </span>
         </span>
         <span id="w_34" class="ocr_word" title="bbox 642 637 861 699">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">οοηίί^ϋ.</ins>
+            <ins title="nlp 2.00">contigit.</ins>
           </span>
         </span>
         <span id="w_35" class="ocr_word" title="bbox 909 639 1129 684">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">οβίβι-αιη</ins>
+            <ins title="nlp 2.00">ceterum</ins>
           </span>
         </span>
         <span id="w_36" class="ocr_word" title="bbox 1161 637 1267 684">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">βίπδ</ins>
-            <del title="nlp 0.90">βία</del>
-            <del title="nlp 0.89">βίαι</del>
-            <del title="nlp 0.88">βίαν</del>
+            <ins title="nlp 2.00">eius</ins>
           </span>
         </span>
         <span id="w_37" class="ocr_word" title="bbox 1300 634 1491 684">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">άίοβικϋ</ins>
-            <del title="nlp 0.90">λιβικὰ</del>
-            <del title="nlp 0.89">λιβικά</del>
-            <del title="nlp 0.88">λιβικῷ</del>
+            <ins title="nlp 2.00">dicendi</ins>
           </span>
         </span>
         <span id="w_38" class="ocr_word" title="bbox 1515 652 1670 699">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">^βητίδ</ins>
-            <del title="nlp 0.90">Λάβητί</del>
-            <del title="nlp 0.89">βατίδα</del>
-            <del title="nlp 0.88">βατίδι</del>
+            <ins title="nlp 2.00">genus</ins>
           </span>
         </span>
         <span id="w_39" class="ocr_word" title="bbox 1703 637 1765 684">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">3,1&gt;</ins>
+            <ins title="nlp 2.00">ab</ins>
           </span>
         </span>
         <span id="w_40" class="ocr_word" title="bbox 1802 637 1899 685">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">αΐϊο</ins>
+            <ins title="nlp 2.00">alio</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 211 708 1897 774">
         <span id="w_41" class="ocr_word" title="bbox 211 708 264 756">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">ίη</ins>
+            <ins title="nlp 2.00">in</ins>
           </span>
         </span>
         <span id="w_42" class="ocr_word" title="bbox 308 709 434 757">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">1ΐΙ)Γ0</ins>
+            <ins title="nlp 2.00">libro</ins>
           </span>
         </span>
         <span id="w_43" class="ocr_word" title="bbox 477 711 712 770">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ρβοπ1ί3;Γί</ins>
+            <ins title="nlp 2.00">peculiari</ins>
           </span>
         </span>
         <span id="w_44" class="ocr_word" title="bbox 758 726 870 757">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ηιοχ</ins>
+            <ins title="nlp 2.00">mox</ins>
           </span>
         </span>
         <span id="w_45" class="ocr_word" title="bbox 918 711 1104 758">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">βάβηάο</ins>
-            <del title="nlp 0.90">βάβης</del>
-            <del title="nlp 0.89">βάβητι</del>
-            <del title="nlp 0.88">βάβητί</del>
+            <ins title="nlp 2.00">exendo</ins>
           </span>
         </span>
         <span id="w_46" class="ocr_word" title="bbox 1152 713 1380 758">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">αοοιίΓ&amp;ΐβ</ins>
+            <ins title="nlp 2.00">accurate</ins>
           </span>
         </span>
         <span id="w_47" class="ocr_word" title="bbox 1427 710 1748 774">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ί;Γ&amp;οΐαΙ)ϋυΓ,</ins>
+            <ins title="nlp 2.00">tractabitur,</ins>
           </span>
         </span>
         <span id="w_48" class="ocr_word" title="bbox 1801 727 1897 773">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">^πο</ins>
-            <del title="nlp 0.90">ἄπο</del>
-            <del title="nlp 0.89">ὕπο</del>
-            <del title="nlp 0.88">ἕπεο</del>
+            <ins title="nlp 2.00">quo</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 211 782 1898 846">
         <span id="w_49" class="ocr_word" title="bbox 211 782 294 830">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">νίδ.</ins>
-            <del title="nlp 0.90">νωδὰ.</del>
-            <del title="nlp 0.89">νωδά.</del>
-            <del title="nlp 0.88">νωδῶ.</del>
+            <ins title="nlp 2.00">via</ins>
           </span>
         </span>
         <span id="w_50" class="ocr_word" title="bbox 340 782 590 830">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ιηπηίβίπΓ</ins>
+            <ins title="nlp 2.00">munietur</ins>
           </span>
         </span>
         <span id="w_51" class="ocr_word" title="bbox 641 783 702 830">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">Άά</ins>
+            <ins title="nlp 2.00">ad</ins>
           </span>
         </span>
         <span id="w_52" class="ocr_word" title="bbox 741 783 1028 845">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">^Γειβοϋο-ίίδ</ins>
+            <ins title="nlp 2.00">graecitatis</ins>
           </span>
         </span>
         <span id="w_53" class="ocr_word" title="bbox 1067 784 1374 845">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">Βγζειηϋηαβ</ins>
+            <ins title="nlp 2.00">Byzantinae</ins>
           </span>
         </span>
         <span id="w_54" class="ocr_word" title="bbox 1420 783 1703 846">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ΙιΐδΐοΓίαιη,</ins>
+            <ins title="nlp 2.00">historiam,</ins>
           </span>
         </span>
         <span id="w_55" class="ocr_word" title="bbox 1760 785 1898 832">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">οαίπβ</ins>
-            <del title="nlp 0.90">βοαί</del>
-            <del title="nlp 0.89">θοαί</del>
-            <del title="nlp 0.88">χοαί</del>
+            <ins title="nlp 2.00">cuius</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 211 856 1598 920">
         <span id="w_56" class="ocr_word" title="bbox 211 871 340 903">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ηιιηο</ins>
+            <ins title="nlp 2.00">nunc</ins>
           </span>
         </span>
         <span id="w_57" class="ocr_word" title="bbox 382 871 443 903">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ηβ</ins>
+            <ins title="nlp 2.00">ne</ins>
           </span>
         </span>
         <span id="w_58" class="ocr_word" title="bbox 482 856 774 905">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Ιίηί&amp;ιηβηία</ins>
+            <ins title="nlp 2.00">liniamenta</ins>
           </span>
         </span>
         <span id="w_59" class="ocr_word" title="bbox 813 858 1009 919">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ς[πίάβπι</ins>
+            <ins title="nlp 2.00">quidem</ins>
           </span>
         </span>
         <span id="w_60" class="ocr_word" title="bbox 1050 859 1240 920">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">βχίΆηί^</ins>
+            <ins title="nlp 2.00">extant,</ins>
           </span>
         </span>
         <span id="w_61" class="ocr_word" title="bbox 1282 857 1598 906">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">οοηάθηάΒΐη.</ins>
+            <ins title="nlp 2.00">condendam.</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
