--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0021.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0021.html
@@ -1403,16 +1403,11 @@
         </span>
         <span id="w_274" class="ocr_word" title="bbox 1686 2829 1805 2878" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κτεί-</ins>
+            <ins title="nlp 2.00">κτείνονται</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 115 2903 1806 2968">
-        <span id="w_275" class="ocr_word" title="bbox 115 2921 281 2952" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νονται</ins>
-          </span>
-        </span>
         <span id="w_276" class="ocr_word" title="bbox 322 2903 374 2951" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
