--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0041.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0041.html
@@ -178,15 +178,9 @@
             <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
-        <span id="w_32" class="ocr_word" title="bbox 653 542 991 606" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Καρχηδόνιος</ins>
-          </span>
-        </span>
         <span id="w_33" class="ocr_word" title="bbox 1007 553 1017 564">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">Καρχηδόνιος·</ins>
           </span>
         </span>
         <span id="w_34" class="ocr_word" title="bbox 1066 538 1303 601" lang="grc">
@@ -382,9 +376,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_71" class="ocr_word" title="bbox 698 849 947 916" lang="grc">
+        <span id="w_71_0" class="ocr_word" title="bbox 698 849 947 916">
           <span class="alternatives">
-            <ins title="nlp 2.00">συμφέρον</ins>
+            <ins class="alt" title="nlp 2.00">ξυμφέρον</ins>
+          </span>
+        </span>
+        <span id="w_71_1" class="ocr_word" title="bbox 698 849 947 916">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_72" class="ocr_word" title="bbox 993 870 1076 899" lang="grc">
@@ -395,11 +394,6 @@
         <span id="w_73" class="ocr_word" title="bbox 1123 848 1344 917" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ὀξύτερος</ins>
-          </span>
-        </span>
-        <span id="w_74" class="ocr_word" title="bbox 1399 853 1839 916" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">καταπράξασθαι·</ins>
           </span>
         </span>
       </span>
@@ -755,9 +749,14 @@
             <ins class="alt" title="nlp 2.00">ἐπ’</ins>
           </span>
         </span>
-        <span id="w_144_1" class="ocr_word" title="bbox 154 1568 212 1598">
+        <span id="w_144_1_0" class="ocr_word" title="bbox 154 1568 212 1598">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἂλλοις</ins>
+            <ins class="alt" title="nlp 2.00">ἄλλοις</ins>
+          </span>
+        </span>
+        <span id="w_144_1_1" class="ocr_word" title="bbox 154 1568 212 1598">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_145" class="ocr_word" title="bbox 488 1550 701 1616" lang="grc">
@@ -778,11 +777,6 @@
         <span id="w_148" class="ocr_word" title="bbox 1386 1546 1620 1615" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">στρατιάν</ins>
-          </span>
-        </span>
-        <span id="w_149" class="ocr_word" title="bbox 1656 1556 1842 1616" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πολλὴν</ins>
           </span>
         </span>
       </span>
@@ -817,9 +811,9 @@
             <ins class="alt" title="nlp 1.00">γενναίως</ins>
           </span>
         </span>
-        <span id="w_156" class="ocr_word" title="bbox 1485 1632 1839 1693" lang="grc">
+        <span id="w_156_0" class="ocr_word" title="bbox 1485 1632 1839 1693">
           <span class="alternatives">
-            <ins title="nlp 2.00">καυωπλισμένους,</ins>
+            <ins class="alt" title="nlp 2.00">καθωπλισμένους,</ins>
           </span>
         </span>
       </span>
@@ -1138,9 +1132,14 @@
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
-        <span id="w_220" class="ocr_word" title="bbox 282 2247 418 2313" lang="grc">
+        <span id="w_220_0" class="ocr_word" title="bbox 282 2247 418 2313">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἲπερ</ins>
+            <ins class="alt" title="nlp 2.00">εἴπερ</ins>
+          </span>
+        </span>
+        <span id="w_220_1" class="ocr_word" title="bbox 282 2247 418 2313">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_221" class="ocr_word" title="bbox 465 2267 536 2307" lang="grc">
@@ -1176,11 +1175,6 @@
         <span id="w_227" class="ocr_word" title="bbox 1512 2267 1611 2308" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῖς</ins>
-          </span>
-        </span>
-        <span id="w_228" class="ocr_word" title="bbox 1649 2246 1842 2314" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀπορωτάτοις</ins>
           </span>
         </span>
       </span>
@@ -1361,14 +1355,14 @@
             <ins class="alt" title="nlp 1.00">οὗτος</ins>
           </span>
         </span>
-        <span id="w_264" class="ocr_word" title="bbox 1706 2557 1839 2625" lang="grc">
+        <span id="w_264_0" class="ocr_word" title="bbox 1706 2557 1839 2625">
           <span class="alternatives">
-            <ins title="nlp 2.00">Οὐρσέλιος</ins>
+            <ins class="alt" title="nlp 2.00">Οὐρ-</ins>
           </span>
         </span>
-        <span id="w_265" class="ocr_word" title="bbox 1864 2575 1907 2608">
+        <span id="w_264_1" class="ocr_word" title="bbox 1706 2557 1839 2625">
           <span class="alternatives">
-            <ins title="nlp 2.00">30</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1378,9 +1372,14 @@
             <ins title="nlp 2.00">Β</ins>
           </span>
         </span>
-        <span id="w_268" class="ocr_word" title="bbox 346 2655 429 2684" lang="grc">
+        <span id="w_268_0" class="ocr_word" title="bbox 346 2655 429 2684">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00">σέλιος</ins>
+          </span>
+        </span>
+        <span id="w_268_1" class="ocr_word" title="bbox 346 2655 429 2684">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_269" class="ocr_word" title="bbox 473 2654 596 2699" lang="grc">
