--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0022.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0022.html
@@ -509,7 +509,7 @@
         </span>
         <span id="w_96" class="ocr_word" title="bbox 675 1201 998 1273" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Εὐμάθιον)</ins>
+            <ins title="nlp 2.00">Εὐμάθιον)</ins>
           </span>
         </span>
         <span id="w_97" class="ocr_word" title="bbox 1039 1208 1090 1254">
@@ -752,19 +752,19 @@
             <ins class="alt" title="nlp 1.00">πεντακισχιλίων</ins>
           </span>
         </span>
-        <span id="w_144" class="ocr_word" title="bbox 1595 1594 1613 1623">
+        <span id="w_144_0" class="ocr_word" title="bbox 1595 1594 1613 1623">
           <span class="alternatives">
-            <ins title="nlp 2.00">I</ins>
+            <ins class="alt" title="nlp 2.00">1</ins>
+          </span>
+        </span>
+        <span id="w_144_1" class="ocr_word" title="bbox 1595 1594 1613 1623">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_145" class="ocr_word" title="bbox 1657 1579 1740 1636">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">34,</ins>
-          </span>
-        </span>
-        <span id="w_146" class="ocr_word" title="bbox 1785 1579 1850 1624">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">31</ins>
           </span>
         </span>
       </span>
@@ -1174,19 +1174,19 @@
             <ins title="nlp 2.00">ad</ins>
           </span>
         </span>
-        <span id="w_225" class="ocr_word" title="bbox 767 2403 785 2434">
+        <span id="w_225_0" class="ocr_word" title="bbox 767 2403 785 2434">
           <span class="alternatives">
-            <ins title="nlp 2.00">ι</ins>
+            <ins class="alt" title="nlp 2.00">1</ins>
+          </span>
+        </span>
+        <span id="w_225_1" class="ocr_word" title="bbox 767 2403 785 2434">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_226" class="ocr_word" title="bbox 821 2389 940 2449">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">232,</ins>
-          </span>
-        </span>
-        <span id="w_227" class="ocr_word" title="bbox 968 2389 1052 2434">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">27.</ins>
           </span>
         </span>
       </span>
@@ -1211,24 +1211,19 @@
             <ins class="alt" title="nlp 1.00">‘αὐτῶν</ins>
           </span>
         </span>
-        <span id="w_232" class="ocr_word" title="bbox 942 2455 1003 2508">
+        <span id="w_232_0" class="ocr_word" title="bbox 942 2455 1003 2508">
           <span class="alternatives">
-            <ins title="nlp 2.00">C᾿</ins>
+            <ins class="alt" title="nlp 2.00">C᾿</ins>
+          </span>
+        </span>
+        <span id="w_232_1" class="ocr_word" title="bbox 942 2455 1003 2508">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_233" class="ocr_word" title="bbox 1043 2477 1133 2522">
           <span class="alternatives">
             <ins title="nlp 2.00">pro</ins>
-          </span>
-        </span>
-        <span id="w_234" class="ocr_word" title="bbox 1175 2455 1355 2508" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">‘αὐτῶν</ins>
-          </span>
-        </span>
-        <span id="w_235" class="ocr_word" title="bbox 1387 2457 1466 2509">
-          <span class="alternatives">
-            <ins title="nlp 2.00">F᾿.</ins>
           </span>
         </span>
       </span>
