--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0033.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0033.html
@@ -57,16 +57,11 @@
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1672 1041 1768 1071" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πα-</ins>
+            <ins title="nlp 2.00">παρασύρει</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 80 1094 1768 1164">
-        <span id="w_10" class="ocr_word" title="bbox 80 1112 281 1164" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ρασύρει</ins>
-          </span>
-        </span>
         <span id="w_11" class="ocr_word" title="bbox 327 1096 408 1147" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -144,9 +139,14 @@
             <ins class="alt" title="nlp 1.00">ἄξια</ins>
           </span>
         </span>
-        <span id="w_26" class="ocr_word" title="bbox 1250 1179 1463 1235" lang="grc">
+        <span id="w_26_0" class="ocr_word" title="bbox 1250 1179 1463 1235">
           <span class="alternatives">
-            <ins title="nlp 2.00">†λιθιου</ins>
+            <ins class="alt" title="nlp 2.00">†</ins>
+          </span>
+        </span>
+        <span id="w_26_1" class="ocr_word" title="bbox 1250 1179 1463 1235">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">λιθιου</ins>
           </span>
         </span>
         <span id="w_27" class="ocr_word" title="bbox 1490 1173 1767 1241" lang="grc">
@@ -631,16 +631,11 @@
         </span>
         <span id="w_120" class="ocr_word" title="bbox 1594 1948 1766 2016" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀμελε-</ins>
+            <ins title="nlp 2.00">ἀμελετήτως</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 73 2026 1766 2097">
-        <span id="w_121" class="ocr_word" title="bbox 73 2029 225 2094" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τήτως</ins>
-          </span>
-        </span>
         <span id="w_122" class="ocr_word" title="bbox 265 2045 442 2094" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἔχουσα</ins>
@@ -874,9 +869,9 @@
             <ins title="nlp 2.00">κῦρον</ins>
           </span>
         </span>
-        <span id="w_168" class="ocr_word" title="bbox 1555 2398 1763 2453" lang="grc">
+        <span id="w_168_0" class="ocr_word" title="bbox 1555 2398 1763 2453">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἀλέλιον</ins>
+            <ins class="alt" title="nlp 2.00">Ἀλέξιον</ins>
           </span>
         </span>
       </span>
@@ -970,9 +965,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 71 2563 1640 2628">
-        <span id="w_186" class="ocr_word" title="bbox 71 2563 184 2625" lang="grc">
+        <span id="w_186_0" class="ocr_word" title="bbox 71 2563 184 2625">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρρ' αὐτῆς</ins>
+            <ins class="alt" title="nlp 2.00">παρ’</ins>
+          </span>
+        </span>
+        <span id="w_186_1" class="ocr_word" title="bbox 71 2563 184 2625">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">αὐτῆς</ins>
           </span>
         </span>
         <span id="w_187" class="ocr_word" title="bbox 410 2571 450 2614">
