--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0043.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0043.html
@@ -178,9 +178,14 @@
             <ins class="alt" title="nlp 2.00">„</ins>
           </span>
         </span>
-        <span id="w_32_1" class="ocr_word" title="bbox 728 519 880 582">
+        <span id="w_32_1_0" class="ocr_word" title="bbox 728 519 880 582">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἲστε</ins>
+            <ins class="alt" title="nlp 2.00">ἴστε</ins>
+          </span>
+        </span>
+        <span id="w_32_1_1" class="ocr_word" title="bbox 728 519 880 582">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_33" class="ocr_word" title="bbox 915 516 1112 583" lang="grc">
@@ -201,11 +206,6 @@
         <span id="w_36" class="ocr_word" title="bbox 1379 514 1629 584" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">βάρβαρος</ins>
-          </span>
-        </span>
-        <span id="w_37" class="ocr_word" title="bbox 1656 517 1820 568" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὑτοσὶ</ins>
           </span>
         </span>
       </span>
@@ -1179,7 +1179,7 @@
         </span>
         <span id="w_226" class="ocr_word" title="bbox 802 2228 1047 2291" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοιοῦτον</ins>
+            <ins title="nlp 2.00">(τοιοῦτον</ins>
           </span>
         </span>
         <span id="w_227" class="ocr_word" title="bbox 1071 2249 1164 2295" lang="grc">
@@ -1288,16 +1288,11 @@
         </span>
         <span id="w_248" class="ocr_word" title="bbox 1655 2381 1831 2446" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μαινό-</ins>
+            <ins title="nlp 2.00">μαινόμενον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 137 2458 1831 2526">
-        <span id="w_249" class="ocr_word" title="bbox 137 2481 288 2526" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μενον</ins>
-          </span>
-        </span>
         <span id="w_250" class="ocr_word" title="bbox 325 2482 391 2522" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὡς</ins>
