--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0034.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0034.html
@@ -232,12 +232,7 @@
         </span>
         <span id="w_42" class="ocr_word" title="bbox 807 611 1161 681" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀμνημοσύνης</ins>
-          </span>
-        </span>
-        <span id="w_43" class="ocr_word" title="bbox 1175 650 1187 675">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">ἀμνημοσύνης,</ins>
           </span>
         </span>
         <span id="w_44" class="ocr_word" title="bbox 1228 627 1348 673" lang="grc">
@@ -865,12 +860,7 @@
         </span>
         <span id="w_167" class="ocr_word" title="bbox 1082 1698 1318 1766" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄντικρυς</ins>
-          </span>
-        </span>
-        <span id="w_168" class="ocr_word" title="bbox 1332 1737 1346 1764">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">ἄντικρυς,</ins>
           </span>
         </span>
         <span id="w_169" class="ocr_word" title="bbox 1388 1699 1439 1748" lang="grc">
